# StockAutoTradingBot

./: .env  .env.example  .gitattributes  .gitignore  Diary.md  README.md  bot.sqlite3  curr_strategy.txt  kis_smoke_test.py  main.py  pyproject.toml  requirements.txt  runnerPaper.py  runner_paper.py
Daily_bot/: Diary.md  README.md  bot.sqlite3  main.py  memo.txt  models.py  utils.py
Daily_bot/backtest/: replay_db_builder.py  replay_market_traces.py  (+1 more)
MK1/: main.py  main_gpt.py  note.txt
Weekly_bot/: .env.example  CURRENT_RULES.md  README.md  main.py  requirements.txt  strategy.txt
broker/: base.py  kisAuth.py  kisParsers.py  kisRest.py  kisSpecs.py  kisWs.py  kis_rest.py  kiwoom_client.py  mock_client.py
config/: settings.py  settings.yaml
core/: models.py
data/: kospi200.csv  trading.db
docs/: NEW_PC_SETUP.md  branch_review.md  strategy_design.md
execution/: orderManager.py  riskManager.py
logs/: account_traces_20260605.csv  account_traces_20260608.csv  account_traces_20260610.csv  fills_20260611.csv  kt00001_cash_debug_20260622.jsonl  market_traces_20260605.csv  orders_20260610.csv  trade_fills_audit.csv
risk/: force_sell.py  guards.py  stop_loss.py
scripts/: run_dry.sh  run_real.ps1
storage/: db.py  sqliteRepo.py  sqlite_repo.py
strategy/: exits.py  features.py  kiwoom_like.py  orderbook_predictor.py  predictPrice.py  scorer.py  selector.py  signal.py  universe.py
tests/: test_cash_allocation.py  test_force_sell.py  test_guards.py  test_kiwoom_client.py  test_predictor.py  test_runtime_safety.py  test_stop_loss.py  test_universe.py
(+675 files in other folders)
